K8s/service.yaml
apiVersion: "v1"
kind: "Service"
metadata:
  name: "ott-platform"
  namespace: "media"
  labels:
    app: "backend"
spec:
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 3000
  selector:
    app: "backend"
  type: "ClusterIP"
