K8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ott-platform
  namespace: media

  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80},{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-west-2:517293881035:certificate/649f45ac-5b4c-4d67-b6e5-32ef709bac9d
spec:
  ingressClassName: alb
  rules:
  - host: ott.sivadevops.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ott-platform
            port:
              number: 80
